# comp371_linux_skeleton

./: .gitignore  CMakeLists.txt  OBJloader.h  README.md  main.cpp  shaderloader.h  vertex.shader
